Minor CSS Fix for Safari on Mobile
The pull request section on safari looked super-flat.  This PR is
just adds an inherit height so that it doesn't look broken.

(screen shots in the comments)

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -324,7 +324,7 @@ a{ color: #fff}
     border-radius: 0;
     padding: 1rem;
 }
-.octoInline .bubble .repositoryInner {transform: none !important;}
+.octoInline .bubble .repositoryInner {transform: none !important;height: initial;}
 .octoInline .repo-title {margin-right: 1rem;width: inherit;}
 .octoInline .repository:after {display: none;}
 .octoInline + .infoPanel {margin-top: 0rem;}
